[metadata]
name = edge_provision
version = attr: edge_provision.VERSION
long_description = file: README.md
license = GPL
author_email = lauri.vihman@taltech.ee
classifiers = 
	Programming Language :: Python :: 3.9

[build_ext]
inplace=1

[options]
packages=edge_provision

install_requires =
	click
	boto3 <= 1.20
	balena-sdk <= 11

[options.entry_points]
console_scripts =
	eprov = edge_provision.main:cli

[wheel]
universal=1

