[metadata]
name = eprov
version = attr: eprov.VERSION
long_description = file: README.md
license = GPL
author_email = lauri.vihman@taltech.ee
classifiers = 
	Programming Language :: Python :: 3.9

[build_ext]
inplace=1

[options]
packages=eprov

install_requires =
	click
	boto3 >= 1.20
	balena-sdk >= 11

[options.entry_points]
console_scripts =
	eprov = eprov.main:cli

[wheel]
universal=1

